# cse341Project2/swagger_output.json
@@ -2,28 +2,16 @@
   "swagger": "2.0",
   "info": {
     "title": "CSE341Project2 Node.js",
-    "description": "Node.js Project 2 assignment for CSE341. This project is a REST API for a medication inventory system. It allows the user to add, update, and delete medications from the database. It also allows the user to log medication usage. The user can also retrieve information about medications by name or by date.\n The apiKey is 5db70934345e409f96cb070e9495asdkjh54s534s2asd35as15a840ffa",
-    "version": "1.0.0"
+    "description": "CSE341 Project 2: Medication Inventory System REST API.\n This Node.js project, developed as part of the CSE341 course Project 2 assignment, presents a comprehensive REST API for a medication inventory system.\n The system is designed to facilitate seamless management of medications, allowing users to perform a range of operations"
   },
-  "host": "cse341project2-00el.onrender.com",
+  "host": "localhost:5600",
   "basePath": "/",
-  "schemes": ["https"],
-  "securityDefinitions": {
-    "apiKey": {
-      "type": "apiKey",
-      "name": "z-key",
-      "in": "header"
-    }
-  },
-  "security": [
-    {
-      "apiKey": []
-    }
-  ],
+  "schemes": ["http"],
   "paths": {
     "/meds/": {
       "get": {
-        "description": "Retrieve all medications from the database. This will not retrieve medication usage logs for the medications.",
+        "tags": ["Medication Management"],
+        "description": "Retrieve all medications from the database. This will not retrieve medication usage logs for the medications, only a list of medications with their details.",
         "responses": {
           "200": {
             "description": "OK"
@@ -37,6 +25,7 @@
         }
       },
       "post": {
+        "tags": ["Medication Management"],
         "description": "Add a new medication to the database. All feilds are required.",
         "parameters": [
           {
@@ -83,7 +72,8 @@
 
     "/meds/{id}": {
       "get": {
-        "description": "Retrieve information for a single medication by ID. This will not retrieve medication usage logs for the medication.",
+        "tags": ["Medication Management"],
+        "description": "Retrieve information for a single medication by ID. This will not retrieve medication usage logs for the medication, only the medication's details.",
         "parameters": [
           {
             "name": "id",
@@ -99,6 +89,7 @@
         }
       },
       "put": {
+        "tags": ["Medication Management"],
         "description": "Update information for a single medication by ID. All fields are required.",
         "parameters": [
           {
@@ -151,6 +142,7 @@
         }
       },
       "delete": {
+        "tags": ["Medication Management"],
         "description": "Delete a medication by ID. This will not delete medication usage logs for the medication.",
         "parameters": [
           {
@@ -177,37 +169,39 @@
       }
     },
 
-      "/meds/name/{name}": {
-        "get": {
-          "description": "Retrieve medication information by name for all meds matching the search. This will allow the user to search for a medication by partial or full spelling of the name.",
-          "parameters": [
-            {
-              "name": "name",
-              "in": "path",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful"
-            },
-            "400": {
-              "description": "Bad Request"
-            },
-            "404": {
-              "description": "Not Found"
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
+    "/meds/name/{name}": {
+      "get": {
+        "tags": ["Medication Management"],
+        "description": "Retrieve medication information by name for all meds matching the search. This will allow the user to search for a medication by partial or full spelling of the name.",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
-      },  
+      }
+    },
 
-      "/meds/usage/{id}": {
+    "/usage/{id}": {
       "post": {
-        "description": "Log medication usage using the medication's ID. This will also update the medication's inventory.",
+        "tags": ["Medication Usage"],
+        "description": "Log medication usage using the medication's ID. This will also update the medication's inventory in both collections.",
         "parameters": [
           {
             "name": "id",
@@ -248,9 +242,10 @@
       }
     },
 
-    "/meds/usageByDate/{date}": {
+    "/usage/byDate/{date}": {
       "get": {
-        "description": "Retrieve medication usage information for all medications filled on a specific date.",
+        "tags": ["Medication Usage"],
+        "description": "Retrieve medication usage information for all medications filled on a specific date. The format to be used for the date should be YYYY-MM-DD.",
         "parameters": [
           {
             "name": "date",
@@ -273,9 +268,295 @@
       }
     },
 
-    "/meds/usageById/{id}": {
+    "/usage/byId/{id}": {
       "get": {
+        "tags": ["Medication Usage"],
         "description": "Retrieve medication usage information for a specific medication by ID. This will retrieve all usage logs for the medication.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+
+    "/usage/{id}/{date}": {
+      "put": {
+        "tags": ["Medication Usage"],
+        "description": "Update medication usage using the medication's ID and Date. This will update the medication's inventory in both collections.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "date",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "medUnitsUsed": {
+                  "example": "any number"
+                },
+                "medUsedDate": {
+                  "example": "any date"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Medication Usage"],
+        "description": "Delete a medication usage by ID and Date. This will update the medication's inventory in both collections.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+
+    "/profile/": {
+      "get": {
+        "tags": ["Profile Management"],
+        "description": "Retrieve all user profiles from the database. This is for users only, and not for any medication information.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+
+      "put": {
+        "tags": ["Profile Management"],
+        "description": "Update a user profile by ID. The ID cannot be altered. The Display Name is the only required field, but the email field can be updated also.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "displayName": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+
+    "/wholesalers/": {
+      "get": {
+        "tags": ["Wholesaler Management"],
+        "description": "Retrieve all wholesalers from the database. This will retrieve pricing info for all medications that are listed in the wholesalers collection.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+
+      "post": {
+        "tags": ["Wholesaler Management"],
+        "description": "Add a wholesaler's pricing for a medication by the medId to the database. All fields are required.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "compName": {
+                  "example": "any"
+                },
+                "medId": {
+                  "example": "any medId"
+                },
+                "medCost": {
+                  "example": "any number"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+
+    "/wholesalers/{id}": {
+      "put": {
+        "tags": ["Wholesaler Management"],
+        "description": "Update a medication's pricing and wholesaler info by the medId.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "compName": {
+                  "example": "any"
+                },
+                "medCost": {
+                  "example": "any number"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+
+      "delete": {
+        "tags": ["Wholesaler Management"],
+        "description": "Delete a medication pricing info by ID. This will not delete medication usage logs or med info from the other collections for the medication.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+
+      "get": {
+        "tags": ["Wholesaler Management"],
+        "description": "Retrieve medication pricing information for a specific medication by ID from the wholesalers collection.",
         "parameters": [
           {
             "name": "id",
